--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ECC"
+name = "ecc"
 version = "0.1.0"
 authors = ["Diogo Jerónimo <diogo10jeronimo@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rug = "1.5"
